[package]
name = "time-elapsed"
version = "0.1.0"
edition = "2021"

description = "A Rust crate that provides a concise and handy way to benchmark elapsed time inside functions."
license = "MIT"
readme = "README.md"
repository = "https://github.com/9elt/time-elapsed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
